# ml_project_rust

./: Cargo.toml  readme.md
src/: lib.rs
src/data/: mnist.rs
src/model/: network.rs  oja.rs
src/plotting/: cpu_plotting.rs
src/threading/: thread_pool.rs
src/utils/: constants.rs
